rpi5/sportarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sportarr
  labels:
    app: sportarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sportarr
  serviceName: sportarr
  template:
    metadata:
      name: sportarr
      labels:
        app: sportarr
    spec:
      containers:
        - name: sportarr
          image: sportarr/sportarr:4.0.990.1065@sha256:b0b183c421e9dcb81d55272c3940cbd9cfb81d351e14d7f22f331dca12516ece
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1867
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          #resources:
          #  requests:
          #    cpu: 250m
          #    memory: 500Mi
          #  limits:
          #    memory: 1Gi
          #livenessProbe:
          #  httpGet:
          #    port: http
          #    path: /ping
          #  initialDelaySeconds: 30
          #  periodSeconds: 30
          #  timeoutSeconds: 5
          #  failureThreshold: 3
          #readinessProbe:
          #  httpGet:
          #    port: http
          #    path: /ping
          #  periodSeconds: 10
          #  timeoutSeconds: 5
          #  failureThreshold: 3
      restartPolicy: Always
      securityContext:
        fsGroup: 3002
      volumes:
        - name: data
          hostPath:
            path: /data
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
